# mwm

./: Makefile  README.md  STATUS.md  end.txt  keybindings.sample.json  local.mwm.plist.in  m3.py  mwm.py  pyproject.toml
typings/: typer.pyi
