[project]
name = "mwm"
version = "1.0"
requires-python = ">=3.11"

[tool.ruff]
exclude = [".venv", "pyobjc"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C408",
    "C901",
    "COM8",
    "D",
    "E501",
    "EM101",
    "EM102",
    "INP001",
    "LOG015",
    "PLR09",
    "RET505",
    "RUF005",
    "S101",
    "S301",
    "S603",
    "S607",
    "T2",
    "TC002",
    "TC003",
    "TC006",
    "TRY003",
]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"mwm.py" = ["ANN401", "BLE001", "PLC0415"]

[tool.pyright]
typeCheckingMode = "strict"
exclude = [".venv", "pyobjc"]
reportUnnecessaryComparison = false
reportUnnecessaryCast = false
